feat: bring project meeting and pet coin updates from projects